Allow the build to pass (including tests) with JDK 9 and JDK 10. The project is not yet modularized however.